@@ -1,5 +1,9 @@
 2007-11-02  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
+	* library/tkfbox.tcl (::tk::dialog::file::CompleteEnt): Added <Tab>
+	completion. [FRQ 805091]
+	* library/tkfbox.tcl: Made file dialog use Ttk widgets for better L&F.
+
 	* library/demos/sayings.tcl: Better resizing. [Bug 1822410]
 
 2007-11-01  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
